--- a/New_version/templates/SA/Ticket/index.html
+++ b/New_version/templates/SA/Ticket/index.html
@@ -101,7 +101,12 @@
                                                                 <span class="tb-sub"><span class="badge rounded-pill bg-danger">{{i[8]}}</span></span>
                                                             </div>
                                                             {% endif %}
+                                                            <div class="nk-tb-col">
+                                                                <ul class="nk-tb-actions gx-1 my-n1">
+                                                                    <a href="/SA/Get_ticket_details?T_id={{i[0]}}"><em class="icon ni ni-emails"></em></a>
 
+                                                                </ul>
+                                                            </div>
 
 
 
