update if and elif in all html pages because we need highest performance and speed it was only if but now it is if with elif

--- a/New_version/templates/ACC/Pre_Invoice/index.html
+++ b/New_version/templates/ACC/Pre_Invoice/index.html
@@ -70,11 +70,11 @@
                                                             <div class="nk-tb-col tb-col-md">
                                                                 {% if i[5] == 0: %}
                                                                 <span class="tb-sub"><span class="badge rounded-pill bg-warning">در انتظار تایید</span></span>
-                                                                {% endif %}
-                                                                {% if i[5] == -1: %}
+
+                                                                {% elif i[5] == -1: %}
                                                                 <span class="tb-sub"><span class="badge rounded-pill bg-danger">تایید نشده</span></span>
-                                                                {% endif %}
-                                                                {% if i[5] == 1: %}
+
+                                                                {% elif i[5] == 1: %}
                                                                 <span class="tb-sub"><span class="badge rounded-pill bg-success">تایید شده</span></span>
                                                                 {% endif %}
                                                             </div>
