--- a/New_version/templates/SA/index.html
+++ b/New_version/templates/SA/index.html
@@ -136,11 +136,11 @@
                                                                 <div class="nk-tb-col">
                                                                     {% if i[5] == 0: %}
                                                                     <span class="tb-sub"><span class="badge rounded-pill bg-warning">در انتظار تایید</span></span>
-                                                                    {% endif %}
-                                                                    {% if i[5] == -1: %}
+
+                                                                    {% elif i[5] == -1: %}
                                                                     <span class="tb-sub"><span class="badge rounded-pill bg-danger">تایید نشده</span></span>
-                                                                    {% endif %}
-                                                                    {% if i[5] == 1: %}
+
+                                                                    {% elif i[5] == 1: %}
                                                                     <span class="tb-sub"><span class="badge rounded-pill bg-success">تایید شده</span></span>
                                                                     {% endif %}
                                                                 </div>
